Fix header spacing on publication groups #16

--- a/css/main.scss
+++ b/css/main.scss
@@ -235,6 +235,9 @@ strong {
 }
 
 
+.filtered-list-group h3.ui.header {
+  margin-top: calc(2rem - .14285714em)
+}
 .filter-tags {
   margin: 0.4em 0 1.5em;
 }
